# pyEasyStart

./: LICENSE  LICENSE.txt  NOTICE.txt  PRO-LICENSE.txt  README.md
docs/: index.html
pypi/: LICENSE  LICENSE-AGPL-3.0  MANIFEST.in  README.md  setup.cfg
pypi/src/pyeasystart/: cli.py
pypi/src/pyeasystart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  README.txt  tauri.conf.json
src-tauri/src/: main.rs
