[metadata]
name = pyeasystart
version = 0.1.0
description = pyEasyStart - GUI helper for Python: detect Python, create virtual environments, install packages.
long_description = file: README.md
long_description_content_type = text/markdown
author = Options-x.co
author_email = pyeasystart@gmail.com
url = https://github.com/Options-x-co/pyEasyStart
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
keywords = python, venv, packages, gui, tauri

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyeasystart = pyeasystart.cli:main