[package]
name = "pyeasystart"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri = { version = "2.0.0", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
